# librop

./: CMakeLists.txt  README.md  default.nix  flake.nix  genlib.py  pkg.nix
.github/workflows/: build.yml
